# McW-Learning

./: .gitignore  README.md
Day1/: day1.md
Day1 (19-02-26)/: Day1_basic.cpp  Day1_oop.cpp
Day10 (03-03-26)/1D/: Normal_operations.cpp  Simd_1dvec_mult_div.cpp
Day10 (03-03-26)/2D/: 2D_Simd.cpp
Day11 (06-03-26)/Basic_Cmake/: CMakeLists.txt  hellowrld.cpp
Day11 (06-03-26)/Cmake_lib_one_cmakelist/: CMakeLists.txt
Day11 (06-03-26)/Cmake_lib_with_multiple_cmakelist/: CMakeLists.txt
Day11 (06-03-26)/Cmake_lib_with_multiple_cmakelist/src/: CMakeLists.txt
Day11 (06-03-26)/Cmake_lib_with_multiple_cmakelist/user_lib/: CMakeLists.txt
Day11 (06-03-26)/Cmake_lib_with_multiple_cmakelist/user_lib/my_math/: my_math.cpp  (+1 more)
Day11 (06-03-26)/Cmake_lib_with_subdirectory_cmakelist/src/: main.cpp
Day12 (10-03-26)/: torch_practice.ipynb
Day13 (11-03-26)/: CMakeLists.txt  README.md  test_script.cpp
Day13 (11-03-26)/include/: conv.hpp
Day13 (11-03-26)/src/: conv.cpp
Day13 (11-03-26)/test/: test_script.cpp
Day14 (17-03-26)/: main.py  test_main.py
Day14 (17-03-26)/src/: __init__.py  my_entr.py  my_fliplr.py  my_pow.py
Day14 (17-03-26)/test/: test_my_entr.py  test_my_fliplr.py  test_my_logaddexp.py  test_my_pow.py
Day2/: Courses.cpp  Day2.md  Makefile  Student.cpp
Day2 (20-02-26)/: Courses.h  Student.h  main.cpp
Day3/: Day3.md
Day4 (23-02-26)/: Day4.md
Day5/: Day5.md
Day6/: Day6.md
Day7/Data_packaging/: solution.h
Day7/loop_interchange_1/: solution.cpp
Day8/vectorization_1/: solution.cpp
Day9 (02-03-26)/: Simd_operations.cpp  Simd_operations.s
